--- a/css/styles.css
+++ b/css/styles.css
@@ -368,6 +368,24 @@ img {
   flex-basis: calc(100% / 3 - 30px);
   margin-left: 30px;
   margin-top: 30px;
+  position: relative;
+}
+.text-about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  background-color: rgba(47, 48, 58, 0.8);
+
+  position: absolute;
+  bottom: 0%;
+  width: 100%;
+  height: 70px;
 }
 
 /*  ===========================end chem zanimaemsia ===================*/
@@ -482,12 +500,13 @@ img {
   border: 1px solid #afb1b8;
   box-sizing: border-box;
   border-radius: 4px;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-/* .cust-list-element {
-} */
 
 .cust-icon {
   fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* =========================end post klient======================== */
@@ -597,6 +616,8 @@ img {
   border-radius: 4px;
   padding: 6px 22px;
   border: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-btn:hover,
