--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
   --bd-color-sec: #2f303a; /* bagcround color secondary*/
   --section-pt: 94px; /* padding top for sect*/
   --section-pb: 94px; /* padding bot for sect*/
-  --main-anim: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --main-anim: color 250ms cubic-bezier(0.4, 0, 0.2, 1); /*animation default */
 }
 /* дефолт настр */
 body {
@@ -615,6 +615,9 @@ img {
   min-width: 528px;
   min-height: 580px;
   background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%),
+    0px 2px 1px rgb(0 0 0 / 20%);
+  border-radius: 4px;
 }
 
 .modal-close-but {
@@ -641,6 +644,157 @@ img {
   opacity: 0;
   visibility: none;
   pointer-events: none;
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  margin: 40px;
+}
+
+.form-head {
+  text-align: center;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
+.modal-form-field {
+  margin-top: 10px;
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: #757575;
+
+  transition: border-color 250ms linear;
+}
+
+.modal-form-input-wrapper {
+  position: relative;
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 42px;
+  transition: border-color 250ms linear;
+}
+
+.modal-form-input:focus {
+  outline: none;
+  border: 1px solid #2196f3;
+}
+
+.modal-form-input-wrapper {
+  display: block;
+  margin-top: 4px;
+}
+
+.modal-form-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  display: block;
+  width: 18px;
+  height: 18px;
+
+  transition: fill 250ms linear;
+}
+
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--accent-color);
+}
+
+.modal-form-message {
+  width: 100%;
+  height: 122px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
+  resize: none;
+  transition: border-color 250ms linear;
+}
+
+.modal-form-message::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  font: var(--main-font);
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-form-message:focus {
+  outline: none;
+  border: 1px solid #2196f3;
+}
+
+.modal-form-check-desc {
+  margin-bottom: 30px;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: #757575;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin-top: 20px;
+}
+
+.modal-form-check-desc::before {
+  content: "";
+  margin-right: 8px;
+  display: block;
+  width: 16px;
+  height: 16px;
+  border: 2px solid #212121;
+  background: #ffffff;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 250ms linear;
+}
+
+.modal-form-term:checked + .modal-form-check-desc::before {
+  background-image: url(../images/galka.svg);
+  background-position: center;
+  background-color: var(--accent-color);
+  background-repeat: no-repeat;
+  border: var(--accent-color);
+}
+
+.modal-form-term:focus + .modal-form-check-desc::before {
+}
+
+.modal-form-btn {
+  align-self: center;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+
+  color: #ffffff;
+  padding: 10px 55px;
+  margin-top: 30px;
+  background-color: #2196f3;
+  min-width: 200;
+  border-radius: 4px;
+}
+
+.modal-form-btn:hover,
+.modal-form-btn:focus {
+  background-color: var(--accent-color);
+  color: #ffffff;
 }
 /* =================================modal okno=======================================*/
 
